[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/DialogueBox2.gd" type="Script" id=1]
[ext_resource path="res://Temporary Clipart/generic-rpg-ui-text-box.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Aaxiaolongti.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Temporary Clipart/next-indicator.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 110.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 112, 32 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 930, 40 ), Vector2( 930, 35 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 988, 25 ) ]
}

[node name="SmallPopUpBox" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Content" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -41.0
margin_right = -30.0
margin_bottom = -20.0
grow_vertical = 0
rect_min_size = Vector2( 29, 58 )
custom_colors/font_color = Color( 0.196078, 0.133333, 0.180392, 1 )
custom_constants/line_spacing = 2
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1
autowrap = true
max_lines_visible = 2

[node name="NextIndicator" type="TextureRect" parent="Content"]
margin_left = 988.0
margin_top = 25.0
margin_right = 1028.0
margin_bottom = 64.9988
mouse_filter = 2
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Content/NextIndicator"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="TextAnimation" type="Tween" parent="Content"]

[connection signal="visibility_changed" from="Content" to="." method="_on_Content_visibility_changed"]
[connection signal="tween_all_completed" from="Content/TextAnimation" to="." method="_on_TextAnimation_tween_all_completed"]
